Try out jvm-openai